[package]
name = "imagectl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.27", features = ["derive"] }
image = {version = "0.25.5", features = ["avif-native"]}
indicatif = { version = "0.17.9", features = ["rayon"] }
rayon = "1.10.0"
strum = "0.26.3"
strum_macros = "0.26.4"
